ProdIND/ProdPrograms/force-app/main/default/objects/GST_Type_Store__mdt/GST_Type_Store__mdt.object-meta.xml
<CustomObject>
    <label>GST Type Store</label>
    <pluralLabel>GST Types Store</pluralLabel>
</CustomObject>