ProdIND/ProdPrograms/force-app/main/default/objects/GST_Type_Store__mdt/fields/CESS__c.field-meta.xml
<CustomField>
    <fullName>CESS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CESS</label>
    <type>Checkbox</type>
</CustomField>