ProdIND/ProdPrograms/force-app/main/default/objects/GST_Type_Store__mdt/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CGST</label>
    <type>Checkbox</type>
</CustomField>