ProdIND/ProdPrograms/force-app/main/default/objects/GST_Type_Store__mdt/fields/GST_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_Type__c</fullName>
    <label>GST Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>