ProdIND/ProdPrograms/force-app/main/default/objects/GST_Type_Store__mdt/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IGST</label>
    <type>Checkbox</type>
</CustomField>