ProdIND/ProdPrograms/force-app/main/default/objects/GST_Type_Store__mdt/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SGST</label>
    <type>Checkbox</type>
</CustomField>