ProdIND/ProdPrograms/force-app/main/default/objects/GST_Type_Store__mdt/fields/UTGST__c.field-meta.xml
<CustomField>
    <fullName>UTGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UTGST</label>
    <type>Checkbox</type>
</CustomField>